<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:background="#0a9e88">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#c26a6a"
            >

        <TextView
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:text="删除文件？"
                android:id="@+id/textView"
                android:layout_gravity="center_vertical|left"
                android:gravity="center_vertical|left"
                android:paddingLeft="20dp"
                android:textSize="16dp"
                android:textStyle="bold|italic"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/deleteenterdesc"
                android:id="@+id/textView2"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

        <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:text="@string/delete"
                android:id="@+id/delete_ok_button"
                android:background="@drawable/redbuttonstyle"/>

        <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:text="@string/dontdelete"
                android:id="@+id/delete_cancel_button"
                android:singleLine="false"
                android:background="@drawable/lightbluebuttonstyle"
                android:layout_marginLeft="20dp"/>
    </LinearLayout>
</LinearLayout>